; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_vnops.c_devfs_timestamp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_vnops.c_devfs_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i64, i64 }

@devfs_dotimes = common dso_local global i64 0, align 8
@time_second = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timespec*)* @devfs_timestamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @devfs_timestamp(%struct.timespec* %0) #0 {
  %2 = alloca %struct.timespec*, align 8
  %3 = alloca i64, align 8
  store %struct.timespec* %0, %struct.timespec** %2, align 8
  %4 = load i64, i64* @devfs_dotimes, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.timespec*, %struct.timespec** %2, align 8
  %8 = call i32 @vfs_timestamp(%struct.timespec* %7)
  br label %23

9:                                                ; preds = %1
  %10 = load i64, i64* @time_second, align 8
  store i64 %10, i64* %3, align 8
  %11 = load %struct.timespec*, %struct.timespec** %2, align 8
  %12 = getelementptr inbounds %struct.timespec, %struct.timespec* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %9
  %17 = load i64, i64* %3, align 8
  %18 = load %struct.timespec*, %struct.timespec** %2, align 8
  %19 = getelementptr inbounds %struct.timespec, %struct.timespec* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  %20 = load %struct.timespec*, %struct.timespec** %2, align 8
  %21 = getelementptr inbounds %struct.timespec, %struct.timespec* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  br label %22

22:                                               ; preds = %16, %9
  br label %23

23:                                               ; preds = %22, %6
  ret void
}

declare dso_local i32 @vfs_timestamp(%struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
